Fix: video muted 속성 추가 / 푸터 모바일 구간 메뉴바 인터렉션 적용 / z-index 값 10단위로 수정 등

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -22,8 +22,8 @@ $border-radius--card: 4px;
 $border-radius--video: 16px;
 
 // z-index
-$z-index--header: 9;
-$z-index--loading: 10;
-$z-index--cursor: 100;
-$z-index--overlay: 1000;
-$z-index--skip-nav: 10000;
+$z-index--header: 10;
+$z-index--loading: 20;
+$z-index--cursor: 30;
+$z-index--overlay: 40;
+$z-index--skip-nav: 50;
