--- a/assets/scss/components/_marquee.scss
+++ b/assets/scss/components/_marquee.scss
@@ -17,7 +17,6 @@ $component-name: 'marquee';
     padding-right: 10vw;
     transform: translate(-100%);
     animation-name: marquee;
-    animation-duration: 47s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
   }
