--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -26,10 +26,12 @@
   &__logo {
     position: relative;
     z-index: 1;
+    overflow: hidden;
     a {
       display: block;
       width: 137px;
       height: 22px;
+      transition: transform 1.5s cubic-bezier(.165,.84,.44,1);
       @include mobile {
         width: 110px;
         height: 18px;
@@ -117,6 +119,7 @@
     display: flex;
     align-items: center;
     column-gap: 30px;
+    overflow: hidden;
     @include tablet {
       align-items: flex-start;
       &:not(.global-nav__list--lang) {
@@ -146,6 +149,7 @@
     z-index: 1;
     display: flex;
     overflow: hidden;
+    transition: transform 1.5s cubic-bezier(.165,.84,.44,1);
     &[data-lang="de"] {
       .global-nav__text {
         opacity: .4;
