--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -404,7 +404,7 @@ section {
     letter-spacing: -.03em;
   }
   .marquee__texts {
-    animation-duration: calc(1s* 42.43926666666667);
+    animation-duration: 47s;
   }
   &__thumbnail {
     position: absolute;
